--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ joblib>=1.3.2
 pydantic>=2.6.0
 
 # GenAI (Gemini)
-google-generativeai>=0.5.0
+google-genai>=0.3.0
 
 # Environment variables (recommended)
 python-dotenv>=1.0.1
